# BiomassCalculations

./: README.md  biomass.py  pyproject.toml
Supplementary_Data/: Biomass_EquationParameters.csv
conda-recipe/: meta.yaml
docs/: CODEBASE.md
src/: __init__.py
src/biomass/: __init__.py  core.py
tests/: test_biomass.py
