[build-system]
requires = ['setuptools>=69', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'biomass-calculations'
version = '0.1.0'
description = 'Python biomass calculation library backed by bundled species coefficient data.'
readme = {file = 'README.md', content-type = 'text/markdown'}
requires-python = '>=3.11'
authors = [
    {name = 'Gregory A. Greene', email = 'map.n.trowel@gmail.com'},
]
dependencies = [
    'numpy>=1.24',
]
keywords = ['biomass', 'forestry', 'ecology', 'calculations']
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'License :: Other/Proprietary License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Scientific/Engineering',
]

[tool.setuptools]
package-dir = {'' = 'src'}

[tool.setuptools.packages.find]
where = ['src']
include = ['biomass']

[tool.setuptools.package-data]
biomass = ['supplementary_data/*.csv']
